--- a/src/main/native/CMakeLists.txt
+++ b/src/main/native/CMakeLists.txt
@@ -54,3 +54,11 @@ file(GLOB_RECURSE SOURCE_LIST "src/*.cpp" "src/*.hpp")
 
 # add the library
 add_library(freetype-native SHARED "${SOURCE_LIST}")
+
+# set up the export properties
+set_target_properties(freetype-native
+    PROPERTIES
+    ARCHIVE_OUTPUT_DIRECTORY "${LIBRARY_EXPORT_PATH}/"
+    LIBRARY_OUTPUT_DIRECTORY "${LIBRARY_EXPORT_PATH}/"
+    RUNTIME_OUTPUT_DIRECTORY "${NATIVE_EXPORT_PATH}/"
+)
