--- a/.gitignore
+++ b/.gitignore
@@ -4,8 +4,8 @@ target/
 
 # Natives
 freetype-native.dll
-freetype-native.so
-freetype-native.dylib
+libfreetype-native.so
+libfreetype-native.dylib
 freetype-native.exp
 freetype-native.lib
 freetype-native.pdb
