--- a/pom.xml
+++ b/pom.xml
@@ -6,11 +6,14 @@
 
     <groupId>me.mat</groupId>
     <artifactId>freetype-java</artifactId>
-    <version>1.2</version>
+    <version>1.3</version>
 
     <properties>
-        <maven.compiler.source>8</maven.compiler.source>
-        <maven.compiler.target>8</maven.compiler.target>
+        <!-- Compiler settings -->
+        <maven.compiler.source>11</maven.compiler.source>
+        <maven.compiler.target>11</maven.compiler.target>
+
+        <!-- Directories -->
         <build.directory>${project.basedir}/target/</build.directory>
         <native.build.directory>${build.directory}/cmake/</native.build.directory>
         <library.export.directory>${native.build.directory}/lib/</library.export.directory>
