--- a/pom.xml
+++ b/pom.xml
@@ -69,6 +69,14 @@
                     </execution>
                 </executions>
             </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-jar-plugin</artifactId>
+                <version>3.2.2</version>
+                <configuration>
+                    <finalName>freetype-native</finalName>
+                </configuration>
+            </plugin>
         </plugins>
     </build>
 
